# DotaEngineer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
dbt/: dbt_project.yml
dbt/models/marts/: hero_matchups_immortal.sql  hero_meta_immortal.sql
dbt/models/staging/: stg_hero_meta_opendota.sql
notebooks/: 01_meta_exploration.ipynb
src/dotaengineer/: __init__.py  cli.py  config.py  db.py  elo.py  medals.py
src/dotaengineer/analysis/: draft.py  meta.py  player_performance.py
src/dotaengineer/api/: __init__.py  app.py  routes.py
src/dotaengineer/api/routes/: __init__.py  leaderboard.py  matches.py  pages.py  players.py
src/dotaengineer/dashboard/: app.py
src/dotaengineer/ingestion/: base.py  opendota.py  stratz.py
src/dotaengineer/models/: __init__.py  hero.py  match.py  player.py
src/dotaengineer/pipeline/: __init__.py  schema.py
src/dotaengineer/pipeline/jobs/: __init__.py  hero_meta.py  item_builds.py  pro_matches.py  pro_players.py
src/dotaengineer/pipeline/sources/: opendota.py  steam.py  stratz.py
src/dotaengineer/pipelines/: meta_pipeline.py  player_pipeline.py
src/dotaengineer/replay/: __init__.py  dem_reader.py  parser.py  watcher.py
src/dotaengineer/services/: __init__.py  balance_service.py  leaderboard_service.py  match_service.py  meta_service.py  player_service.py  role_service.py
src/dotaengineer/static/: heroes.json
src/dotaengineer/templates/: base.html  compare.html  error.html  heroes.html  index.html  meta.html
src/dotaengineer/templates/leaderboard/: balance.html  index.html
src/dotaengineer/templates/matches/: create.html  detail.html  list.html
src/dotaengineer/templates/partials/: balance_result.html  claim_success.html  hero_results.html  medal.html  player_options.html  role_breakdown.html  synergy_rows.html  toast.html
src/dotaengineer/templates/players/: list.html  profile.html  register.html
tests/integration/: test_services.py
tests/unit/: test_balance.py  test_elo.py  test_models.py  test_rate_limiter.py  test_replay.py
tools/replay-parser/: pom.xml
tools/replay-parser/src/main/java/cafe/: DotaCafeParser.java  EntityDumper.java
