[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotaengineer"
version = "0.1.0"
description = "High-MMR Dota 2 data engineering and analysis platform"
requires-python = ">=3.11"
dependencies = [
    # HTTP & APIs
    "httpx>=0.27",
    "tenacity>=8.2",
    # Data processing
    "polars>=0.20",
    "duckdb>=0.10",
    "pandas>=2.2",
    "pyarrow>=15.0",
    # Database
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # Pipeline orchestration
    "prefect>=2.19",
    # Validation & settings
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # API server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Dashboard
    "streamlit>=1.33",
    "plotly>=5.20",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dotaengineer = "dotaengineer.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
