[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotaengineer"
version = "0.2.0"
description = "Dota 2 cybercafe stats tracker — offline ELO, match history, and team balance"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Database (PostgreSQL)
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    # Validation & settings
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # File watching
    "watchdog>=4.0",
    # HTTP (for one-time hero data fetch)
    "httpx>=0.27",
    # CLI
    "typer>=0.12",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rich>=13.7",
]

[project.optional-dependencies]
replay = [
    "demoparser2>=0.5",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dotaengineer = "dotaengineer.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
